Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-122140

The video freezes when recording it with higher resolution in widgets camera example

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • P3: Somewhat important
    • 6.5.7, 6.7.2, 6.8.0 FF
    • 6.6.1, 6.7.0 Beta2
    • Examples and Demos
    • None
    • Android
    • 562fc1ea0 (dev), 34f96c6d5 (6.7), f48005e54 (tqtc/lts-6.5), 997f528ee (dev), d5ffa35f4 (dev), 84c477a88 (6.7), 666378f74 (6.7), 38613a6bf (tqtc/lts-6.5), f378fad4d (tqtc/lts-6.5)
    • 2024wk12FOQtforAndroid, 2024wk14FOQtforAndroid, 2024wk16FOQtforAndroid

    Description

      MacOS 14.3

      Qt Creator 12.0.1

      Qt 6.7.0-beta2

       

      Device: Samsung Galaxy S22 13.0

      Steps to reproduce:

      1. Run example app on Android device - https://doc.qt.io/qt-6/qtmultimedia-camera-example.html
      2. Switch to video mode
      3. Go to File > Change settings and select the highest possible resolution (for me it was YUV420P 4080x3060 30FPS), but it happens with the format bigger than 1920x1080.
      4. Start recording.

      Expected: The video is recorded.

      Actual: The freezes each second. Attaching some errors from the console.

      Reproducibility:  100% 

       

       

      W ImageReader_JNI: Unable to acquire a buffer item, very likely client tried to acquire more than maxImages buffers
      E QtCamera2: Image processing taking too long. Let's wait 0,5s more java.lang.IllegalStateException: maxImages (10) has already been acquired, call #close before acquiring more.
      W ImageReader_JNI: Unable to acquire a buffer item, very likely client tried to acquire more than maxImages buffers
      W ImageReader_JNI: Unable to acquire a buffer item, very likely client tried to acquire more than maxImages buffers
      W ImageReader_JNI: Unable to acquire a buffer item, very likely client tried to acquire more than maxImages buffers
      E QtCamera2: Image processing taking too long. Let's wait 0,5s more java.lang.IllegalStateException: maxImages (10) has already been acquired, call #close before acquiring more.
      W ImageReader_JNI: Unable to acquire a buffer item, very likely client tried to acquire more than maxImages buffers
      W ImageReader_JNI: Unable to acquire a buffer item, very likely client tried to acquire more than maxImages buffers
      W ImageReader_JNI: Unable to acquire a buffer item, very likely client tried to acquire more than maxImages buffers
      E QtCamera2: Image processing taking too long. Let's wait 0,5s more java.lang.IllegalStateException: maxImages (10) has already been acquired, call #close before acquiring more.
      W ImageReader_JNI: Unable to acquire a buffer item, very likely client tried to acquire more than maxImages buffers
      W ImageReader_JNI: Unable to acquire a buffer item, very likely client tried to acquire more than maxImages buffers
      W ImageReader_JNI: Unable to acquire a buffer item, very likely client tried to acquire more than maxImages buffers
      E QtCamera2: Image processing taking too long. Let's wait 0,5s more java.lang.IllegalStateException: maxImages (10) has already been acquired, call #close before acquiring more.
      W ImageReader_JNI: Unable to acquire a buffer item, very likely client tried to acquire more than maxImages buffers
      W ImageReader_JNI: Unable to acquire a buffer item, very likely client tried to acquire more than maxImages buffers
      W ImageReader_JNI: Unable to acquire a buffer item, very likely client tried to acquire more than maxImages buffers
      E QtCamera2: Image processing taking too long. Let's wait 0,5s more java.lang.IllegalStateException: maxImages (10) has already been acquired, call #close before acquiring more.
      W ImageReader_JNI: Unable to acquire a buffer item, very likely client tried to acquire more than maxImages buffers
      W ImageReader_JNI: Unable to acquire a buffer item, very likely client tried to acquire more than maxImages buffers
      W ImageReader_JNI: Unable to acquire a buffer item, very likely client tried to acquire more than maxImages buffers
      E QtCamera2: Image processing taking too long. Let's wait 0,5s more java.lang.IllegalStateException: maxImages (10) has already been acquired, call #close before acquiring more.
      W ImageReader_JNI: Unable to acquire a buffer item, very likely client tried to acquire more than maxImages buffers
      W ImageReader_JNI: Unable to acquire a buffer item, very likely client tried to acquire more than maxImages buffers
      W ImageReader_JNI: Unable to acquire a buffer item, very likely client tried to acquire more than maxImages buffers
      E QtCamera2: Image processing taking too long. Let's wait 0,5s more java.lang.IllegalStateException: maxImages (10) has already been acquired, call #close before acquiring more.
      W ImageReader_JNI: Unable to acquire a buffer item, very likely client tried to acquire more than maxImages buffers
      W ImageReader_JNI: Unable to acquire a buffer item, very likely client tried to acquire more than maxImages buffers
      W ImageReader_JNI: Unable to acquire a buffer item, very likely client tried to acquire more than maxImages buffers
      E QtCamera2: Image processing taking too long. Let's wait 0,5s more java.lang.IllegalStateException: maxImages (10) has already been acquired, call #close before acquiring more.
      W ImageReader_JNI: Unable to acquire a buffer item, very likely client tried to acquire more than maxImages buffers
      W ImageReader_JNI: Unable to acquire a buffer item, very likely client tried to acquire more than maxImages buffers
      W ImageReader_JNI: Unable to acquire a buffer item, very likely client tried to acquire more than maxImages buffers
      E QtCamera2: Image processing taking too long. Let's wait 0,5s more java.lang.IllegalStateException: maxImages (10) has already been acquired, call #close before acquiring more.
      W ImageReader_JNI: Unable to acquire a buffer item, very likely client tried to acquire more than maxImages buffers
      W ImageReader_JNI: Unable to acquire a buffer item, very likely client tried to acquire more than maxImages buffers
      W ImageReader_JNI: Unable to acquire a buffer item, very likely client tried to acquire more than maxImages buffers
      E QtCamera2: Image processing taking too long. Let's wait 0,5s more java.lang.IllegalStateException: maxImages (10) has already been acquired, call #close before acquiring more.
      W ImageReader_JNI: Unable to acquire a buffer item, very likely client tried to acquire more than maxImages buffers
      W ImageReader_JNI: Unable to acquire a buffer item, very likely client tried to acquire more than maxImages buffers
      W ImageReader_JNI: Unable to acquire a buffer item, very likely client tried to acquire more than maxImages buffers
      E QtCamera2: Image processing taking too long. Let's wait 0,5s more java.lang.IllegalStateException: maxImages (10) has already been acquired, call #close before acquiring more.
      W ImageReader_JNI: Unable to acquire a buffer item, very likely client tried to acquire more than maxImages buffers
      W ImageReader_JNI: Unable to acquire a buffer item, very likely client tried to acquire more than maxImages buffers
      E QtCamera2: Image processing taking too long. Let's wait 0,5s more java.lang.IllegalStateException: maxImages (10) has already been acquired, call #close before acquiring more. 

       

      Attachments

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              bartlomiejmoskal Bartlomiej Moskal
              lkos Łukasz Kosiorowski
              Votes:
              1 Vote for this issue
              Watchers:
              5 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: